added html, css and templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
     <nav>
         <a href="/">binary-team-picker</a>
         <a href="/">about</a>
-        <a href="/">login</a>
+        <a href="/login">login</a>
         <a href="/register">register</a>
         <a href="/account">account</a>
 
